add listings types
