# src/routes/features.js
@@ -1,0 +1,13 @@
+const Router = require('express-promise-router');
+
+const { apiGetAll } = require('middleware/api-methods');
+const { Features } = require('models');
+
+const router = Router({ mergeParams: true });
+
+/**
+ * Handle GET /api/features route.
+ */
+router.get('/', apiGetAll(Features));
+
+module.exports = router;
