# src/routes/index.js
@@ -6,6 +6,9 @@ const docsRouter = require('./api-docs');
 const listingsRouter = require('./listings');
 const companiesRouter = require('./companies');
 const rolesRouter = require('./roles');
+const propertyType = require('./property-type');
+const listingType = require('./listing-type');
+const features = require('./features');
 
 const router = Router();
 
@@ -15,5 +18,8 @@ router.use('/api/users', usersRouter);
 router.use('/api/listings', listingsRouter);
 router.use('/api/companies', companiesRouter);
 router.use('/api/roles', rolesRouter);
+router.use('/api/property-types', propertyType);
+router.use('/api/listing-types', listingType);
+router.use('/api/features', features);
 
 module.exports = router;
